<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/content_main" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings_bluetooth_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_sheet"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/bottom_sheet"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/toggleButton_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/toggleButton_left_thigh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:textOff="@string/left_thigh_off"
                    android:textOn="@string/left_thigh_on" />

                <ToggleButton
                    android:id="@+id/toggleButton_left_calf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:textOff="@string/left_calf_off"
                    android:textOn="@string/left_calf_on" />

                <ToggleButton
                    android:id="@+id/toggleButton_right_thigh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:textOff="@string/right_thigh_off"
                    android:textOn="@string/right_thigh_on" />

                <ToggleButton
                    android:id="@+id/toggleButton_right_calf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:textOff="@string/right_calf_off"
                    android:textOn="@string/right_calf_on" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>



