<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_monitor">

    <fragment
        android:id="@+id/navigation_monitor"
        android:name="com.example.quardimu.ui.MonitorFragment"
        android:label="@string/title_monitor"
        tools:layout="@layout/fragment_monitor">
    </fragment>

    <fragment
        android:id="@+id/navigation_gps"
        android:name="com.example.quardimu.ui.GPS.GPSFragment"
        android:label="@string/pref_title_GPS"
        tools:layout="@layout/fragment_gps" />

    <fragment
        android:id="@+id/navigation_plot"
        android:name="com.example.quardimu.ui.Plot.PlotFragment"
        android:label="@string/pref_title_plot"
        tools:layout="@layout/fragment_plot" />

    <fragment
        android:id="@+id/navigation_records"
        android:name="com.example.quardimu.ui.RecordsFragment"
        android:label="@string/title_records"
        tools:layout="@layout/fragment_records" />
</navigation>